removed scripting permission

--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
         }
     ],
     "permissions": [
-        "activeTab",
-        "scripting"
+        "activeTab"
       ],
       "icons": {
         "64": "logo.png"
